# AI-Powered-Resume-Ranking

./: .replit  LICENSE  README.md  app.py  project_report.py  pyproject.toml  requirements_streamlit.txt  setup_instructions.md  streamlit_cloud_deployment.md  streamlit_requirements.txt
attached_assets/: Pasted--05-31-39-Provisioning-machine-05-31-45-Preparing-system-05-31-50-Starting-1749965567944_1749965567945.txt
sample_data/: job_descriptions.py  sample_resumes.py
utils/: nlp_processor.py  pdf_processor.py  report_generator.py  scoring_engine.py
