[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.0",
    "pandas>=2.3.0",
    "pdfplumber>=0.11.7",
    "plotly>=6.1.2",
    "pypdf2>=3.0.1",
    "reportlab>=4.4.1",
    "scikit-learn>=1.7.0",
    "spacy>=3.8.7",
    "streamlit>=1.45.1",
]
